--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,8 +19,6 @@ bold: 700
 body,html {
   margin: 0;
   height: 100%;
-  position: fixed;
-  overflow: hidden;
 }
 h1 {
   font-family: 'Poppins', sans-serif;
